@@ -4,10 +4,7 @@ import io.vertx.core.AsyncResult;
 import io.vertx.core.Future;
 import io.vertx.core.Handler;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -23,32 +20,32 @@ import static java.util.Objects.requireNonNull;
  *
  * @param <O> the type of the value produced by the future
  */
-public abstract class VIO<O> implements Supplier<Future<O>> {
+public sealed interface VIO<O> extends Supplier<Future<O>> permits Exp, Val {
 
-    public static final VIO<Boolean> TRUE = VIO.succeed(true);
-    public static final VIO<Boolean> FALSE = VIO.succeed(false);
+    VIO<Boolean> TRUE = VIO.succeed(true);
+    VIO<Boolean> FALSE = VIO.succeed(false);
 
-    public static <O> VIO<O> fail(final Throwable failure) {
+    static <O> VIO<O> fail(final Throwable failure) {
         if (failure == null) return fail(new NullPointerException("failure is null"));
         return effect(() -> Future.failedFuture(failure));
     }
 
-    public static <O> VIO<O> effect(final Supplier<Future<O>> effect) {
+    static <O> VIO<O> effect(final Supplier<Future<O>> effect) {
         Objects.requireNonNull(effect);
         return new Val<>(requireNonNull(effect));
     }
 
     @SafeVarargs
     @SuppressWarnings({"rawtypes", "varargs"})
-    public static <O> VIO<O> race(final VIO<O> first,
-                                  final VIO<O>... others
-                                 ) {
+    static <O> VIO<O> race(final VIO<O> first,
+                           final VIO<O>... others
+                          ) {
         Objects.requireNonNull(first);
         Objects.requireNonNull(others);
         List<VIO<O>> list = new ArrayList<>();
         list.add(first);
         if (others.length > 0) list.addAll(Arrays.stream(others)
-                                                 .collect(Collectors.toList())
+                                                 .toList()
                                           );
 
         return VIO.effect(() ->
@@ -68,11 +65,11 @@ public abstract class VIO<O> implements Supplier<Future<O>> {
                           });
     }
 
-    public static <O> VIO<O> succeed(final O constant) {
+    static <O> VIO<O> succeed(final O constant) {
         return new Val<>(() -> Future.succeededFuture(constant));
     }
 
-    protected static <E> VIO<E> NULL() {
+    static <E> VIO<E> NULL() {
         return VIO.succeed(null);
     }
 
@@ -84,81 +81,218 @@ public abstract class VIO<O> implements Supplier<Future<O>> {
      * @param <P> the type of the returned value
      * @return a new value
      */
-    public abstract <P> VIO<P> map(final Function<O, P> fn);
+    default <P> VIO<P> map(final Function<O, P> fn) {
+        Objects.requireNonNull(fn);
+        return VIO.effect(() -> get()
+                                  .map(fn)
+                         );
+    }
 
     /**
      * Creates a new value by applying a function to the successful result of this value, and returns the result of the
      * function as the new value. If this value returns an exception then the new value will also contain this
      * exception.
      *
-     * @param fn  the function which will be applied to the successful result of this value
-     * @param <Q> the type of the returned value
+     * @param lambda the function which will be applied to the successful result of this value
+     * @param <Q>    the type of the returned value
      * @return a new value
      */
-    public abstract <Q> VIO<Q> then(final Lambda<O, Q> fn);
+    default <Q> VIO<Q> then(final Lambda<O, Q> lambda) {
+        Objects.requireNonNull(lambda);
+        return VIO.effect(() -> get().flatMap(o -> lambda.apply(o)
+                                                         .get())
+                         );
+    }
 
-    public abstract <Q> VIO<Q> then(final Lambda<O, Q> successMapper,
-                                    final Lambda<Throwable, Q> failureMapper
-                                   );
+    default <U> VIO<U> then(final Lambda<O, U> successMapper,
+                            final Lambda<Throwable, U> failureMapper
+                           ) {
+        Objects.requireNonNull(successMapper);
+        Objects.requireNonNull(failureMapper);
 
-    /**
-     * returns a new value tha will retry its execution if it fails
-     *
-     * @param retryPolicy the policy to retry
-     * @return a new value
-     */
-    public abstract VIO<O> retry(RetryPolicy retryPolicy);
+        return VIO.effect(() -> get().compose(result -> successMapper.apply(result)
+                                                                     .get(),
+                                              failure -> failureMapper.apply(failure)
+                                                                      .get()
+                                             )
+                         );
 
-
-    public abstract VIO<O> retry(final Predicate<Throwable> predicate,
-                                 final RetryPolicy policy
-                                );
+    }
 
 
-    public abstract VIO<O> repeat(final Predicate<O> predicate,
-                                  final RetryPolicy policy
-                                 );
+    default VIO<O> retry(final Predicate<Throwable> predicate,
+                         final RetryPolicy policy
+                        ) {
+        Objects.requireNonNull(policy);
+        Objects.requireNonNull(predicate);
+
+        return retry(this,
+                     policy,
+                     new RetryStatus(0,
+                                     0,
+                                     -1
+                     ),
+                     predicate
+                    );
+    }
+
+    private VIO<O> retry(VIO<O> exp,
+                         Function<RetryStatus, Optional<Delay>> policy,
+                         RetryStatus rs,
+                         Predicate<Throwable> predicate
+                        ) {
+
+        return exp.then(VIO::succeed,
+                        exc -> {
+                            if (predicate.test(exc)) {
+                                Optional<Delay> delayOpt = policy.apply(rs);
+                                if (delayOpt.isEmpty()) return VIO.fail(exc);
+                                Delay delay = delayOpt.get();
+                                return delay.effect.then(nill -> {
+                                                             long delayDuration = delay.duration.toMillis();
+                                                             return retry(exp,
+                                                                          policy,
+                                                                          new RetryStatus(rs.counter + 1,
+                                                                                          rs.cumulativeDelay + delayDuration,
+                                                                                          delayDuration
+                                                                          ),
+                                                                          predicate
+                                                                         );
+                                                         }
+                                                        );
+                            } else return VIO.fail(exc);
+                        }
+                       );
+    }
+
+    default VIO<O> repeat(final Predicate<O> predicate,
+                          final RetryPolicy policy
+                         ) {
+        return repeat(this,
+                      policy,
+                      new RetryStatus(0,
+                                      0,
+                                      0
+                      ),
+                      predicate
+                     );
+    }
+
+    private VIO<O> repeat(VIO<O> exp,
+                          Function<RetryStatus, Optional<Delay>> policy,
+                          RetryStatus rs,
+                          Predicate<O> predicate
+                         ) {
+
+        return exp.then(o -> {
+                            if (predicate.test(o)) {
+                                Optional<Delay> delayOpt = policy.apply(rs);
+                                if (delayOpt.isEmpty()) return VIO.succeed(o);
+                                Delay delay = delayOpt.get();
+                                return delay.effect.then(nill -> {
+                                                             long delayDuration = delay.duration.toMillis();
+                                                             return repeat(exp,
+                                                                           policy,
+                                                                           new RetryStatus(rs.counter + 1,
+                                                                                           rs.cumulativeDelay + delayDuration,
+                                                                                           delayDuration
+                                                                           ),
+                                                                           predicate
+                                                                          );
+                                                         }
+                                                        );
+                            } else return VIO.succeed(o);
+                        }
+                       );
+
+    }
+
+    default VIO<O> retry(final RetryPolicy policy) {
+        Objects.requireNonNull(policy);
+
+        return retry(this,
+                     policy,
+                     new RetryStatus(0, 0, 0),
+                     e -> true
+                    );
+    }
 
     /**
      * Creates a new value that will handle any matching throwable that this value might contain. If there is no match,
      * or if this future contains a valid result then the new future will contain the same.
      *
-     * @param fn the function to apply if this value fails
+     * @param lambda the function to apply if this value fails
      * @return a new value
      */
 
-    public abstract VIO<O> recover(final Function<Throwable, O> fn);
+    default VIO<O> recover(final Function<Throwable, O> lambda) {
+        Objects.requireNonNull(lambda);
+        return VIO.effect(() -> get().compose(Future::succeededFuture,
+                                              e -> Future.succeededFuture(lambda.apply(e))
+                                             )
+                         );
+    }
 
     /**
      * Creates a new value that will handle any matching throwable that this value might contain by assigning it another
      * value.
      *
-     * @param fn the function to apply if this Future fails
+     * @param lambda the function to apply if this Future fails
      * @return a new value
      */
 
-    public abstract VIO<O> recoverWith(final Lambda<Throwable, O> fn);
+    default VIO<O> recoverWith(final Lambda<Throwable, O> lambda) {
+        Objects.requireNonNull(lambda);
+        return VIO.effect(() -> get().compose(Future::succeededFuture,
+                                              e -> lambda.apply(e)
+                                                         .get()
+                                             )
+                         );
+    }
 
-    public abstract VIO<O> fallbackTo(final Lambda<Throwable, O> fn);
+    default VIO<O> fallbackTo(final Lambda<Throwable, O> lambda) {
+        Objects.requireNonNull(lambda);
+        return VIO.effect(() -> get().compose(Future::succeededFuture,
+                                              e -> lambda.apply(e)
+                                                         .get()
+                                                         .compose(Future::succeededFuture,
+                                                                  e1 -> Future.failedFuture(e)
+                                                                 )
+                                             )
+                         );
+
+    }
 
     /**
      * Adds a consumer to be notified of the succeeded result of this value.
      *
-     * @param handler the consumer that will be called with the succeeded result
+     * @param successConsumer the consumer that will be called with the succeeded result
      * @return a reference to this value, so it can be used fluently
      */
-    public abstract VIO<O> onSuccess(final Consumer<O> handler);
+    default VIO<O> onSuccess(final Consumer<O> successConsumer) {
+        Objects.requireNonNull(successConsumer);
+        return VIO.effect(() -> get().onSuccess(successConsumer::accept));
+    }
 
     /**
      * Add a handler to be notified of the result.
      *
-     * @param successHandler the handler that will be called with the succeeded result
-     * @param failureHandler the handler that will be called with the failed result
+     * @param successConsumer the handler that will be called with the succeeded result
+     * @param failureConsumer the handler that will be called with the failed result
      * @return a reference to this, so it can be used fluently
      */
-    public abstract VIO<O> onComplete(final Consumer<O> successHandler,
-                                      final Consumer<Throwable> failureHandler
-                                     );
+    default VIO<O> onComplete(final Consumer<O> successConsumer,
+                              final Consumer<Throwable> failureConsumer
+                             ) {
+        Objects.requireNonNull(successConsumer);
+        Objects.requireNonNull(failureConsumer);
+
+        return VIO.effect(() -> get().onComplete(event -> {
+                              if (event.succeeded()) successConsumer.accept(event.result());
+                              else failureConsumer.accept(event.cause());
+                          })
+                         );
+    }
 
     /**
      * Add a handler to be notified of the result.
@@ -166,10 +300,14 @@ public abstract class VIO<O> implements Supplier<Future<O>> {
      * @param handler the handler that will be called with the result
      * @return a reference to this, so it can be used fluently
      */
-    public abstract VIO<O> onComplete(final Handler<AsyncResult<O>> handler);
+    default VIO<O> onComplete(final Handler<AsyncResult<O>> handler) {
+        Objects.requireNonNull(handler);
+        return VIO.effect(() -> get().onComplete(handler));
+
+    }
 
 
-    public O result() {
+    default O result() {
         return get().result();
     }
 
